fix sidenav z-index

--- a/client/src/app/features/workspaces/components/shell/shell.component.scss
+++ b/client/src/app/features/workspaces/components/shell/shell.component.scss
@@ -21,7 +21,7 @@
   position: fixed;
   top: 0;
   transition: width .2s ease-in-out;
-  z-index: 999999;
+  z-index: 900;
 
   &.app-sidenav-expanded {
     width: 248px;
